force-app/main/default/objects/Expense_Item__c/Expense_Item__c.object-meta.xml
<CustomObject>
    <description>Line item detail representing an individual business expenditure.</description>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>EXP-{00000}</displayFormat>
        <label>Expense Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>