force-app/main/default/objects/Expense_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description or item details.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>