force-app/main/default/objects/Expense_Item__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <description>Human-readable detail of why exception was triggered.</description>
    <label>Exception Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>