force-app/main/default/objects/Expense_Item__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <description>Category of expense item.</description>
    <label>Expense Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Airfare</fullName><default>false</default><label>Airfare</label></value>
            <value><fullName>Hotel / Lodging</fullName><default>false</default><label>Hotel / Lodging</label></value>
            <value><fullName>Meals &amp; Food</fullName><default>true</default><label>Meals &amp; Food</label></value>
            <value><fullName>Ground Transportation / Taxi</fullName><default>false</default><label>Ground Transportation / Taxi</label></value>
            <value><fullName>Client Entertainment</fullName><default>false</default><label>Client Entertainment</label></value>
            <value><fullName>Fuel</fullName><default>false</default><label>Fuel</label></value>
            <value><fullName>Incidentals / Miscellaneous</fullName><default>false</default><label>Incidentals / Miscellaneous</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>