force-app/main/default/objects/Expense_Item__c/fields/Is_Duplicate_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating a potential duplicate expense was identified.</description>
    <label>Potential Duplicate Flag</label>
    <type>Checkbox</type>
</CustomField>