force-app/main/default/objects/Expense_Item__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <description>Method of initial payment.</description>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Personal Cash / Card</fullName><default>true</default><label>Personal Cash / Card</label></value>
            <value><fullName>Corporate Card</fullName><default>false</default><label>Corporate Card</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>