force-app/main/default/objects/Expense_Item__c/fields/Participants_Count__c.field-meta.xml
<CustomField>
    <fullName>Participants_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of colleagues/clients participating.</description>
    <label>Participants Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>