force-app/main/default/objects/Expense_Item__c/fields/Policy_Result__c.field-meta.xml
<CustomField>
    <fullName>Policy_Result__c</fullName>
    <description>Explainable policy engine classification result.</description>
    <label>Policy Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pass</fullName><default>false</default><label>Pass</label></value>
            <value><fullName>Policy Exception</fullName><default>false</default><label>Policy Exception</label></value>
            <value><fullName>Missing Receipt</fullName><default>false</default><label>Missing Receipt</label></value>
            <value><fullName>Potential Duplicate</fullName><default>false</default><label>Potential Duplicate</label></value>
            <value><fullName>Amount Mismatch</fullName><default>false</default><label>Amount Mismatch</label></value>
            <value><fullName>Budget Overrun</fullName><default>false</default><label>Budget Overrun</label></value>
            <value><fullName>Verification Required</fullName><default>false</default><label>Verification Required</label></value>
            <value><fullName>Human Review Required</fullName><default>false</default><label>Human Review Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>