force-app/main/default/objects/Expense_Item__c/fields/Receipt_Attached__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if receipt proof is attached.</description>
    <label>Receipt Attached</label>
    <type>Checkbox</type>
</CustomField>