force-app/main/default/objects/Expense_Item__c/fields/Receipt_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Document_Id__c</fullName>
    <description>Salesforce ContentDocument / ContentVersion ID of uploaded receipt.</description>
    <label>Receipt Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>