force-app/main/default/objects/Expense_Item__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <description>Validation result for this specific line item.</description>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Evaluated</fullName><default>true</default><label>Not Evaluated</label></value>
            <value><fullName>Passed</fullName><default>false</default><label>Passed</label></value>
            <value><fullName>Exception Detected</fullName><default>false</default><label>Exception Detected</label></value>
            <value><fullName>Review Required</fullName><default>false</default><label>Review Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>